# ClaimPliot

./: Dockerfile  LICENSE  README.md  pyproject.toml
backend/: config.py  main.py
backend/agent/: appeal_writer.py  classifier.py  engine.py  prompts.py  retriever.py
backend/api/: routes.py  v1_fallback.py
backend/data/: denial_codes.json
backend/models/: claim.py
backend/rag/: chunker.py  ingest.py  store.py
chroma_db/: chroma.sqlite3
claimpilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: architecture_flow.md
evaluation/: eval_runner.py  metrics.py  test_cases.json
evaluation/results/: eval_run.json
frontend/: package.json  tailwind.config.js
frontend/public/: standalone.html
frontend/src/: App.tsx
frontend/src/components/: AppealPreview.tsx  ClaimInput.tsx  DenialAnalysis.tsx  PolicyMatches.tsx  StatusTracker.tsx
frontend/src/lib/: api.ts
scripts/: download_policies.py  seed_data.py
