[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]

[project]
name = "claimpilot"
version = "0.1.0"
description = "AI Prior Authorization Appeal Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "chromadb>=0.4.24",
    "langchain>=0.1.13",
    "langchain-openai>=0.1.1",
    "langchain-anthropic>=0.1.4",
    "langchain-community>=0.0.29",
    "langchain-groq>=0.1.0",
    "langchain-huggingface>=0.0.3",
    "sentence-transformers>=2.6.1",
    "python-dotenv>=1.0.1",
    "pypdf>=4.1.0",
    "beautifulsoup4>=4.12.3",
    "aiohttp>=3.9.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
]
